--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 # Default ignored files
 /shelf/
-/workspace.xml
+/.idea/workspace.xml
 # Datasource local storage ignored files
 /dataSources/
 /dataSources.local.xml
 # Editor-based HTTP Client requests
 /httpRequests/
 # sonarlint issues storage
-/sonarlint/
+/.idea/sonarlint/
 # output directory
 /target/
