--- a/src/main/resources/database/db.properties
+++ b/src/main/resources/database/db.properties
@@ -5,6 +5,9 @@ db.url = jdbc:mysql://localhost:3306/imdb
 useUnicode = true
 encoding = UTF-8
 useSSL = false
+
+allowPublicKeyRetrieval = true
+
 useJDBCCompliantTimezoneShift = true
 useLegacyDatetimeCode = false
 serverTimezone = UTC
