Page content properties have been added.

--- a/src/main/resources/prop/pagecontent.properties
+++ b/src/main/resources/prop/pagecontent.properties
@@ -2,3 +2,4 @@ title.main = Internet Movie Database: Ratings and reviews
 title.login = Sign in with IMDb
 title.signup = IMDb Registration
 title.verify_email = Authentication required
+title.get_users = Users list
