--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,12 +8,12 @@
         <session-timeout>10</session-timeout>
     </session-config>
 
-    <error-page>
+    <!--<error-page>
         <error-code>404</error-code>
         <location>/pages/error/error404.jsp</location>
     </error-page>
     <error-page>
         <error-code>500</error-code>
         <location>/pages/error/error500.jsp</location>
-    </error-page>
+    </error-page> todo-->
 </web-app>
