--- a/src/main/resources/prop/pagecontent.properties
+++ b/src/main/resources/prop/pagecontent.properties
@@ -1,5 +1,95 @@
-title.main = Internet Movie Database: Ratings and reviews
-title.login = Sign in with IMDb
-title.signup = IMDb Registration
-title.verify_email = Authentication required
+title.add_genre = Add genre
+title.add_feedback = Review
 title.get_users = Users list
+title.login = Sign in with IMDb
+title.add_movie = Add new movie
+title.signup = IMDb Registration
+title.error.page.404 = Error 404
+title.error.page.500 = Error 500
+title.search_movies = Search results
+title.add_movie_cover = Add movie cover
+title.get_feedbacks = Disapproved reviews
+title.get_movie_list = Movies and Serials
+title.verify_email = Authentication required
+title.main = Internet Movie Database: Ratings and reviews
+
+get_feedbacks.table.number = #
+get_feedbacks.table.login = Login
+get_feedbacks.button.block = Block
+get_feedbacks.table.content = Content
+get_feedbacks.button.approve = Approve
+
+get_users.table.number = #
+get_users.table.role = Role
+get_users.button.bane = Bane
+get_users.table.login = Login
+get_users.table.status = Status
+get_users.button.activate = Activate
+get_users.button.enable_admin_rights = Enable admin rights
+get_users.button.disable_admin_rights = Disable admin rights
+
+navbar.common.films = Films
+navbar.common.search = Search
+navbar.common.logout = Logout
+navbar.common.sign.in = Sign in
+navbar.common.serials = Serials
+navbar.admin.add.movie = Add movie
+navbar.admin.add.genre = Add genre
+navbar.admin.users.list = Users list
+navbar.admin.feedbacks.list = Feedbacks list
+
+add_feedback.score = Score
+add_feedback.button.post = Post
+add_feedback.feedback = Feedback
+add_feedback.review.of = Review of
+
+login.label.login = Login
+login.label.password = Password
+login.button.sign.in = Sign In
+login.button.sign.up = Sign Up
+
+get_movie.button.add.feedback = Add feedback
+get_movie.button.edit = Edit
+get_movie.button.delete = Delete
+get_movie.button.edit.movie.cover = Edit cover
+get_movie.message.sign.in.to.see.reviews = Sign in to see the reviews!
+get_movie.message.you.have.already.left.review = You have already left a review!
+
+signup.label.name = Name
+signup.label.login = Login
+signup.label.surname = Surname
+signup.label.password = Password
+signup.label.email.address = Email address
+signup.label.repeat.password = Repeat password
+signup.label.create.account = Create your IMDb account
+
+verify_email.label.password = Password
+verify_email.label.create.account = Create your IMDb account
+verify_email.label.verify.email.address = Verify email address
+verify_email.label.enter.password.from.email = Enter password from email
+verify_email.label.verify.email.address.definition = To verify your email, we've sent a password to
+
+edit_movie.label.title = Title
+edit_movie.label.logline = Logline
+edit_movie.label.release.year = Release year
+
+footer.common.films = Films
+footer.common.serials = Serials
+footer.common.home = Home
+footer.common.ru = RU
+footer.common.en = EN
+
+add_movie.label.title = Title
+add_movie.label.genre = Genre
+add_movie.label.logline = Logline
+add_movie.button.add.movie = Add movie
+add_movie.label.movie.type = Movie type
+add_movie.label.release.year = Release year
+
+add_movie_cover.label.cover.for = Cover for
+add_movie_cover.button.submit = Submit
+
+add_genre.button.add.genre = Add genre
+add_genre.label.genre.name = Genre name
+
+common.quotation.mark = "
