--- a/src/main/resources/prop/pagecontent.properties
+++ b/src/main/resources/prop/pagecontent.properties
@@ -13,13 +13,10 @@ title.get_movie_list = Movies and Serials
 title.verify_email = Authentication required
 title.main = Internet Movie Database: Ratings and reviews
 
-get_feedbacks.table.number = #
-get_feedbacks.table.login = Login
 get_feedbacks.button.block = Block
 get_feedbacks.table.content = Content
 get_feedbacks.button.approve = Approve
 
-get_users.table.number = #
 get_users.table.role = Role
 get_users.button.bane = Bane
 get_users.table.login = Login
@@ -42,6 +39,16 @@ add_feedback.score = Score
 add_feedback.button.post = Post
 add_feedback.feedback = Feedback
 add_feedback.review.of = Review of
+add_feedback.score.one = One
+add_feedback.score.two = Two
+add_feedback.score.three = Three
+add_feedback.score.four = Four
+add_feedback.score.five = Five
+add_feedback.score.six = Six
+add_feedback.score.seven = Seven
+add_feedback.score.eight = Eight
+add_feedback.score.nine = Nine
+add_feedback.score.ten = Ten
 
 login.label.login = Login
 login.label.password = Password
@@ -54,6 +61,14 @@ get_movie.button.delete = Delete
 get_movie.button.edit.movie.cover = Edit cover
 get_movie.message.sign.in.to.see.reviews = Sign in to see the reviews!
 get_movie.message.you.have.already.left.review = You have already left a review!
+get_movie.text.movie.title = Title:
+get_movie.text.movie.logline = Logline:
+get_movie.text.movie.release.year = Year:
+get_movie.text.movie.score = Score:
+get_movie.text.movie.genre =
+
+get_movie_list.sign.in.to.see.rating = Sign in to see rating
+get_movie_list.text.rating = Rating
 
 signup.label.name = Name
 signup.label.login = Login
